--- a/templates/listArticles.phtml
+++ b/templates/listArticles.phtml
@@ -1,12 +1,22 @@
-<?php require 'templates/layout/header.phtml' ?>
+<?php require 'templates/layout/header.phtml'; ?>
+<link rel="stylesheet" href="./css/styles.css">
 
-
-<ul class="list-group">
-<?php foreach($articles as $article): ?>
-    <p><?php echo $article->name ?></p>
-<?php endforeach ?>
-</ul>
-
-
-
-
+<div class="contenedor">
+    <?php foreach ($articles as $article): ?>
+        <div class="card" style="width:18rem">
+            <img class="card-img-top" src=<?php echo $article->img ?> alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">
+                    <?php echo htmlspecialchars($article->name, ENT_QUOTES, 'UTF-8') . " $" . $article->price; ?>
+                </h5>
+                <p class="card-text">
+                    This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+                </p>
+                <p class="card-text">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                </p>
+            </div>
+        </div>
+        
+    <?php endforeach; ?>
+</div>
